Regen to fix a typo.
git-svn-id: https://svn.freebsd.org/doc/head@40462 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/releases/9.1R/relnotes-detailed.html
+++ b/en_US.ISO8859-1/htdocs/releases/9.1R/relnotes-detailed.html
@@ -784,8 +784,8 @@ href="http://svn.freebsd.org/viewvc/base?view=revision&revision=229720"
 target="_top">r229720</a>]</p>
 
 <p>The <a
-href="http://www.FreeBSD.org/cgi/man.cgi?query=ifpnp&sektion=4&manpath=FreeBSD+9.1-RELEASE">
-<span class="citerefentry"><span class="refentrytitle">ifpnp</span>(4)</span></a> driver
+href="http://www.FreeBSD.org/cgi/man.cgi?query=igb&sektion=4&manpath=FreeBSD+9.1-RELEASE">
+<span class="citerefentry"><span class="refentrytitle">igb</span>(4)</span></a> driver
 has been &#09; updated to version 2.3.4. It now supports newer i210/i211 &#09;
 devices.[<a href="http://svn.freebsd.org/viewvc/base?view=revision&revision=238262"
 target="_top">r238262</a>]</p>
@@ -991,8 +991,8 @@ packet &#09; I/O framework has been added. The <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=em&sektion=4&manpath=FreeBSD+9.1-RELEASE"><span
  class="citerefentry"><span class="refentrytitle">em</span>(4)</span></a>, lem(4), &#09;
 <a
-href="http://www.FreeBSD.org/cgi/man.cgi?query=ifpnp&sektion=4&manpath=FreeBSD+9.1-RELEASE">
-<span class="citerefentry"><span class="refentrytitle">ifpnp</span>(4)</span></a>. and <a
+href="http://www.FreeBSD.org/cgi/man.cgi?query=igb&sektion=4&manpath=FreeBSD+9.1-RELEASE">
+<span class="citerefentry"><span class="refentrytitle">igb</span>(4)</span></a>. and <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=re&sektion=4&manpath=FreeBSD+9.1-RELEASE"><span
  class="citerefentry"><span class="refentrytitle">re</span>(4)</span></a> drivers now
 support this &#09; framework. The technical details can be found at <a
