--- a/en_US.ISO8859-1/htdocs/releases/9.1R/relnotes-detailed.html
+++ b/en_US.ISO8859-1/htdocs/releases/9.1R/relnotes-detailed.html
@@ -19,7 +19,7 @@ alink="#0000FF">
 <p class="copyright">Copyright &copy; 2012 The FreeBSD Documentation Project</p>
 
 <p class="pubdate">$FreeBSD: stable/9/release/doc/en_US.ISO8859-1/relnotes/article.xml
-244641 2012-12-23 22:13:53Z hrs $<br />
+244645 2012-12-24 00:08:58Z hrs $<br />
 </p>
 
 <div class="legalnotice"><a id="trademarks" name="trademarks"></a>
@@ -325,7 +325,7 @@ href="http://www.FreeBSD.org/cgi/man.cgi?query=kgmon&sektion=8&manpath=FreeBSD+9
 href="http://svn.freebsd.org/viewvc/base?view=revision&revision=231907"
 target="_top">r231907</a>]</p>
 
-<p>The FreeBSD Linux ABI compatiblity layer &#09;now supports <code
+<p>The FreeBSD Linux ABI compatibility layer &#09;now supports <code
 class="function">linux_fadvice64()</code> and &#09;<code
 class="function">linux_fadvice64_64()</code> system call.[<a
 href="http://svn.freebsd.org/viewvc/base?view=revision&revision=231145"
@@ -601,7 +601,7 @@ target="_top">r235926</a>]</p>
 generations of &#09; GPUs such as IronLake, SandyBridge, and IvyBridge, has been &#09;
 added. The <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=agp&sektion=4&manpath=FreeBSD+9.1-RELEASE">
-<span class="citerefentry"><span class="refentrytitle">agp</span>(4)</span></a> dirver
+<span class="citerefentry"><span class="refentrytitle">agp</span>(4)</span></a> driver
 now supports SandyBridge &#09; and IvyBridge CPU northbridges.[<a
 href="http://svn.freebsd.org/viewvc/base?view=revision&revision=236926"
 target="_top">r236926</a>, <a
@@ -614,7 +614,7 @@ target="_top">r239965</a>]</p>
 href="http://www.FreeBSD.org/cgi/man.cgi?query=snd_hda&sektion=4&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">snd_hda</span>(4)</span></a>
 driver has been &#09; updated. It now supports HDMI, new volume control, &#09; automatic
-recording source selection, runtime &#09; reconfigureation, more then 4 PCM devices on a
+recording source selection, runtime &#09; reconfiguration, more then 4 PCM devices on a
 controller, &#09; multichannel recording, additional playback/record &#09; streams,
 higher bandwidth, and more informative device &#09; names.[<a
 href="http://svn.freebsd.org/viewvc/base?view=revision&revision=232798"
@@ -745,8 +745,8 @@ href="http://www.FreeBSD.org/cgi/man.cgi?query=cxgbe&sektion=4&manpath=FreeBSD+9
 href="http://www.FreeBSD.org/cgi/man.cgi?query=cxgb&sektion=4&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">cxgb</span>(4)</span></a> driver
 has been updated to firmware version &#09; 1.5.2.0. This now supports device
-configuration via a &#09; plain text configration file, IPv6 hardware checksumming, &#09;
-IPv6 TSO and LRO, <tt class="literal">loadfw</tt> command in the &#09; cxgbetool(8)
+configuration via a &#09; plain text configuration file, IPv6 hardware checksumming,
+&#09; IPv6 TSO and LRO, <tt class="literal">loadfw</tt> command in the &#09; cxgbetool(8)
 utility which allows to install a firmware to &#09; the card, <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=sysctl&sektion=8&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">sysctl</span>(8)</span></a>
@@ -768,7 +768,7 @@ target="_top">r229334</a>]</p>
 <p>The <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=et&sektion=4&manpath=FreeBSD+9.1-RELEASE"><span
  class="citerefentry"><span class="refentrytitle">et</span>(4)</span></a> driver &#09;
-now works on all platfomrs. A bug which could prevent &#09; <a
+now works on all platforms. A bug which could prevent &#09; <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=altq&sektion=4&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">altq</span>(4)</span></a> support
 from working has been fixed. A new &#09; <a
@@ -871,7 +871,7 @@ href="http://svn.freebsd.org/viewvc/base?view=revision&revision=228100"
 target="_top">r228100</a>]</p>
 
 <p>The smcphy(4); driver now supports &#09; Seeq Technology 80220 PHY. This is found on
-Adaptec &#09; AIC-6915 Starfire ethernet controller supported by the &#09; <a
+Adaptec &#09; AIC-6915 Starfire Ethernet controller supported by the &#09; <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=sf&sektion=4&manpath=FreeBSD+9.1-RELEASE"><span
  class="citerefentry"><span class="refentrytitle">sf</span>(4)</span></a> driver.[<a
 href="http://svn.freebsd.org/viewvc/base?view=revision&revision=233485"
@@ -1111,7 +1111,7 @@ Layer and <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=ctladm&sektion=8&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">ctladm</span>(8)</span></a>, a
 userland &#09; control utility, have been added. ctl(4) is a disk and &#09; processor
-device emulation subsystem supporting tagged &#09; queueing, SCSI task attribute, SCSI
+device emulation subsystem supporting tagged &#09; queuing, SCSI task attribute, SCSI
 implicit command &#09; ordering, full task management, multiple ports, multiple &#09;
 simultaneous initiators, multiple simultaneous backing &#09; stores, mode sense/select,
 and error injection &#09; support.[<a
@@ -1278,7 +1278,7 @@ target="_top">r235483</a>]</p>
 <p>[amd64, i386] The <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=hpt27xx&sektion=4&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">hpt27xx</span>(4)</span></a> &#09;
-dirver has been added. This supports HighPoint RocketRAID &#09; 27xx-based SAS 6Gb/s
+driver has been added. This supports HighPoint RocketRAID &#09; 27xx-based SAS 6Gb/s
 HBA.[<a href="http://svn.freebsd.org/viewvc/base?view=revision&revision=229975"
 target="_top">r229975</a>]</p>
 
@@ -1319,7 +1319,7 @@ mfi0: COMMAND 0xffffffXXXXXXXXXX TIMEOUT AFTER XX SECONDS
 <p>The <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=mfi&sektion=4&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">mfi</span>(4)</span></a> driver
-now &#09; supports single-message MSI, and Drake Skinny and &#09; ThunderBolt cards. The
+now &#09; supports single-message MSI, and Drake Skinny and &#09; Thunderbolt cards. The
 <a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=loader&sektion=8&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">loader</span>(8)</span></a>
@@ -1459,7 +1459,7 @@ class="command">send</tt> command &#09; now reports estimated size of the stream
 <p><a
 href="http://www.FreeBSD.org/cgi/man.cgi?query=zfs&sektion=8&manpath=FreeBSD+9.1-RELEASE">
 <span class="citerefentry"><span class="refentrytitle">zfs</span>(8)</span></a> <tt
-class="command">destroy</tt> command &#09; now reports estimatated space which would be
+class="command">destroy</tt> command &#09; now reports estimated space which would be
 reclaimed when &#09; <code class="option">-n</code> flag is specified.</p>
 </li>
 
@@ -1488,7 +1488,7 @@ target="_top">r227705</a>]</p>
 <samp class="prompt">#</samp> make install
 </pre>
 
-<p>After that, the following cmmand can be used to check the &#09; system. <tt
+<p>After that, the following command can be used to check the &#09; system. <tt
 class="replaceable"><i>poolname</i></tt> is the ZFS &#09; storage pool name to boot:</p>
 
 <pre class="screen">
@@ -1962,8 +1962,8 @@ configuration files.</p>
 <h3 class="sect2"><a id="AEN1118" name="AEN1118">3.2 User-visible
 incompatibilities</a></h3>
 
-<p>FreeBSD 9.0 and later have several incompatiblities in &#09;system configuration which
-you might want to know before &#09;upgrading your system. <span class="emphasis"><i
+<p>FreeBSD 9.0 and later have several incompatibilities in &#09;system configuration
+which you might want to know before &#09;upgrading your system. <span class="emphasis"><i
 class="emphasis">Please read this section and &#09;the <a
 href="http://www.freebsd.org/releases/9.0R/relnotes-detailed.html#UPGRADE"
 target="_top">Upgrading &#09;Section in 9.0-RELEASE Release Notes</a> carefully before
