--- a/en_US.ISO8859-1/htdocs/releases/9.1R/errata.html
+++ b/en_US.ISO8859-1/htdocs/releases/9.1R/errata.html
@@ -19,7 +19,7 @@ alink="#0000FF">
 <p class="copyright">Copyright &copy; 2012 The FreeBSD Documentation Project</p>
 
 <p class="pubdate">$FreeBSD: stable/9/release/doc/en_US.ISO8859-1/errata/article.xml
-244379 2012-12-18 06:55:13Z hrs $<br />
+244671 2012-12-25 06:07:34Z hrs $<br />
 </p>
 
 <div class="legalnotice"><a id="trademarks" name="trademarks"></a>
@@ -193,7 +193,38 @@ target="_top">SA-12:08.linux</a></td>
 <hr />
 <h2 class="sect1"><a id="late-news" name="late-news">3 Late-Breaking News</a></h2>
 
-<p>No news.</p>
+<p>[November 2, 2012] The current <a
+href="http://www.FreeBSD.org/cgi/man.cgi?query=mfi&sektion=4&manpath=FreeBSD+9.1-RELEASE">
+<span class="citerefentry"><span class="refentrytitle">mfi</span>(4)</span></a> driver
+has an overflow bug when handling disks larger than 2^32 sectors in SYSPD volumes, also
+known as JBODs, which will cause data corruption. This bug has been fixed on this
+FreeBSD-CURRENT but was too late for inclusion in this release. An Errata Notice for
+9.1-RELEASE is planned.</p>
+
+<p>[December 25, 2012] The Installtion Instructions had the following wrong information
+about upgrading procedure. All of them have been fixed in the online version.</p>
+
+<ul>
+<li>
+<p>The link URL of &#8220;upgrading section in the Release &#09; Notes&#8221;, branch
+names where upcoming Security &#09; Advisories or Errata Notices will be applied, and a
+&#09; command line argument of <a
+href="http://www.FreeBSD.org/cgi/man.cgi?query=freebsd-update&sektion=8&manpath=FreeBSD+9.1-RELEASE">
+<span class="citerefentry"><span
+class="refentrytitle">freebsd-update</span>(8)</span></a> were ones &#09; for
+9.0-RELEASE, not for 9.1-RELEASE.</p>
+</li>
+
+<li>
+<p>The list of releases supported by <a
+href="http://www.FreeBSD.org/cgi/man.cgi?query=freebsd-update&sektion=8&manpath=FreeBSD+9.1-RELEASE">
+<span class="citerefentry"><span
+class="refentrytitle">freebsd-update</span>(8)</span></a> &#09; utility were incorrect.
+For 9.X, The following versions are &#09; supported: <tt
+class="literal">9.0-RELEASE</tt>, &#09; <tt class="literal">9.1-BETA1</tt>, and &#09; <tt
+class="literal">9.1-RC[123]</tt>.</p>
+</li>
+</ul>
 </div>
 </div>
 
