--- a/en_US.ISO8859-1/htdocs/releases/10.0R/relnotes.html
+++ b/en_US.ISO8859-1/htdocs/releases/10.0R/relnotes.html
@@ -161,7 +161,7 @@ hv_vmbus_load="YES"</pre><p>  Alternatively, the Hyper-V drivers can be added to
 	  number of outstanding issues.  It also now works on all
 	  architectures.</p><p class="merged">The <a class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=wpi&amp;sektion=4"><span class="citerefentry"><span class="refentrytitle">wpi</span>(4)</span></a> driver has
 	  been updated to include a number of stability fixes.</p><p>The <a class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=cxgbe&amp;sektion=4"><span class="citerefentry"><span class="refentrytitle">cxgbe</span>(4)</span></a> driver has been updated to support
-	  40G/10G Ethernet NICs based on Chelsio's Terminator 5 (T5) ASIC.</p><p>The iw_cxgbe driver has been added.  This is an
+	  40G/10G Ethernet NICs based on Chelsio's Terminator 5 (T5) ASIC.</p><p>The <a class="citerefentry" href="http://www.FreeBSD.org/cgi/man.cgi?query=if_cxgbe&amp;sektion=4"><span class="citerefentry"><span class="refentrytitle">if_cxgbe</span>(4)</span></a> driver has been added.  This is an
 	  experimental iWARP/RDMA driver
 	  (kernel verbs only) for Chelsio's T4 and T5 based cards.</p><p>The Open Fabrics Enterprise Distribution (OFED) and
 	  OFED Infiniband core has been
