--- a/en_US.ISO8859-1/htdocs/releases/10.0R/relnotes.html
+++ b/en_US.ISO8859-1/htdocs/releases/10.0R/relnotes.html
@@ -18,7 +18,7 @@
   as trademarks.  Where those designations appear in this document,
   and the FreeBSD Project was aware of the trademark claim, the
   designations have been followed by the <span class="quote">&#8220;<span class="quote">&#8482;</span>&#8221;</span> or the
-  <span class="quote">&#8220;<span class="quote">®</span>&#8221;</span> symbol.</p></div></div><div>Last modified on 2014-01-14 by gjb.</div><div><div xmlns="http://www.w3.org/1999/xhtml" class="abstract"><div class="abstract-title">Abstract</div><p>The release notes for FreeBSD 10.0-RELEASE contain
+  <span class="quote">&#8220;<span class="quote">®</span>&#8221;</span> symbol.</p></div></div><div>Last modified on 2014-01-14 by delphij.</div><div><div xmlns="http://www.w3.org/1999/xhtml" class="abstract"><div class="abstract-title">Abstract</div><p>The release notes for FreeBSD 10.0-RELEASE contain
       a summary of the changes made to the FreeBSD base system on the
       10.0-STABLE development line.  This document lists
       applicable security advisories that were issued since the last
@@ -49,7 +49,12 @@
     release engineering practices.  Clearly the release notes cannot
     list every single change made to FreeBSD between releases; this
     document focuses primarily on security advisories, user-visible
-    changes, and major architectural improvements.</p><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="security"></a>2.1. Security Advisories</h3></div></div></div><p>No security advisories.</p></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="kernel"></a>2.2. Kernel Changes</h3></div></div></div><p>The use of unmapped VMIO buffers
+    changes, and major architectural improvements.</p><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="security"></a>2.1. Security Advisories</h3></div></div></div><p>Problems described in the following security advisories have
+      been fixed.  For more information, consult the individual
+      advisories available from
+      <a class="link" href="http://security.FreeBSD.org/" target="_top">FreeBSD
+	Security Information</a>.</p><div class="informaltable"><table border="0"><colgroup><col /><col /><col /></colgroup><thead><tr><th>Advisory</th><th>Date</th><th>Topic</th></tr></thead><tbody><tr><td><a class="link" href="http://www.freebsd.org/security/advisories/FreeBSD-SA-13:14.openssh.asc" target="_top">SA-13:14.openssh</a></td><td>19 November 2013</td><td><p>OpenSSH AES-GCM memory corruption
+		vulnerability</p></td></tr><tr><td><a class="link" href="http://www.freebsd.org/security/advisories/FreeBSD-SA-14:01.bsnmpd.asc" target="_top">SA-14:01.bsnmpd</a></td><td>14 January 2014</td><td><p>bsnmpd remote denial of service vulnerability</p></td></tr><tr><td><a class="link" href="http://www.freebsd.org/security/advisories/FreeBSD-SA-14:02.ntpd.asc" target="_top">SA-14:02.ntpd</a></td><td>14 January 2014</td><td><p>ntpd distributed reflection Denial of Service vulnerability</p></td></tr><tr><td><a class="link" href="http://www.freebsd.org/security/advisories/FreeBSD-SA-14:03.openssl.asc" target="_top">SA-14:03.openssl</a></td><td>14 January 2014</td><td><p>OpenSSL multiple vulnerabilities</p></td></tr><tr><td><a class="link" href="http://www.freebsd.org/security/advisories/FreeBSD-SA-14:04.bind.asc" target="_top">SA-14:04.bind</a></td><td>14 January 2014</td><td><p>BIND remote denial of service vulnerability</p></td></tr></tbody></table></div></div><div class="sect2"><div xmlns="" class="titlepage"><div><div><h3 xmlns="http://www.w3.org/1999/xhtml" class="title"><a id="kernel"></a>2.2. Kernel Changes</h3></div></div></div><p>The use of unmapped VMIO buffers
       eliminates the need to perform TLB shootdown for mapping on
       buffer creation and reuse, greatly reducing the amount of IPIs
       for shootdown on big-SMP machines and eliminating up to 25-30%
