Add a header in BIG BOLD LETTERS that the page has moved to the wiki.
Sponsored by:	The FreeBSD Foundation


git-svn-id: https://svn.freebsd.org/doc/head@43834 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/donations/wantlist.html
+++ b/en_US.ISO8859-1/htdocs/donations/wantlist.html
@@ -260,6 +260,10 @@
           </div>
           <div id="contentwrap"><h1>FreeBSD Developers Want List</h1>
 
+    <p><strong>This page has moved.</strong></p>
+
+    <p>Please see: <a href="https://wiki.freebsd.org/Donations/WantList">https://wiki.freebsd.org/Donations/WantList</a></p>
+
     <p>This page lists various developer hardware needs.  If you are
       interested in supporting the FreeBSD Project, you might consider
       donating some piece of hardware on this list to the Project.</p>
