Add a redirect to the new wantlist page in the wiki.
Sponsored by:	The FreeBSD Foundation


git-svn-id: https://svn.freebsd.org/doc/head@43835 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/donations/wantlist.html
+++ b/en_US.ISO8859-1/htdocs/donations/wantlist.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" media="screen" href="../layout/css/fixed.css?20130112" type="text/css" />
     <script type="text/javascript" src="../layout/js/google.js"></script>
+    <meta http-equiv="refresh" content="5;url=https://wiki.freebsd.org/Donations/WantList"/>
   </head>
   <body>
     <div id="containerwrap">
@@ -262,7 +263,9 @@
 
     <p><strong>This page has moved.</strong></p>
 
-    <p>Please see: <a href="https://wiki.freebsd.org/Donations/WantList">https://wiki.freebsd.org/Donations/WantList</a></p>
+    <p>Click <a
+	href="https://wiki.freebsd.org/Donations/WantList">here</a> if
+      not automatically redirected in 5 seconds.</p>
 
     <p>This page lists various developer hardware needs.  If you are
       interested in supporting the FreeBSD Project, you might consider
