Whoops.  Went a bit too delete-crazy.  Add the 'Click here if not redirected' link back.
Sponsored by:	The FreeBSD Foundation


git-svn-id: https://svn.freebsd.org/doc/head@43837 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/donations/wantlist.html
+++ b/en_US.ISO8859-1/htdocs/donations/wantlist.html
@@ -263,6 +263,10 @@
 
     <p><strong>This page has moved.</strong></p>
 
+    <p>Click <a
+	href="https://wiki.freebsd.org/Donations/WantList">here</a> if
+      not automatically redirected in 5 seconds.</p>
+
   </div>
           <br class="clearboth" />
         </div>
