Shorten redirect time.
Sponsored by:	The FreeBSD Foundation


git-svn-id: https://svn.freebsd.org/doc/head@44094 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/gsoc.html
+++ b/en_US.ISO8859-1/htdocs/gsoc.html
@@ -263,7 +263,7 @@
 
     <p>Click <a
 	href="https://wiki.FreeBSD.org/SummerOfCode">here</a> if
-      not automatically redirected in 5 seconds.</p>
+      not automatically redirected in 1 second.</p>
 
   </div>
           <br class="clearboth" />
