Redirect visitors to the main Summer of Code page, rather than to the wiki pages.  It's not entirely clear to me why this page is needed at all.
git-svn-id: https://svn.freebsd.org/doc/head@44200 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/gsoc.html
+++ b/en_US.ISO8859-1/htdocs/gsoc.html
@@ -262,7 +262,7 @@
           <div id="contentwrap"><h1>Google Summer of Code</h1>
 
     <p>Click <a
-	href="https://wiki.FreeBSD.org/SummerOfCode">here</a> if
+	href="http://www.FreeBSD.org/projects/summerofcode.html">here</a> if
       not automatically redirected in 1 second.</p>
 
   </div>
