Actually redirect to the right place.
Pointy hat:	gavin


git-svn-id: https://svn.freebsd.org/doc/head@44201 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/gsoc.html
+++ b/en_US.ISO8859-1/htdocs/gsoc.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" media="screen" href="../layout/css/fixed.css?20130112" type="text/css" />
     <script type="text/javascript" src="../layout/js/google.js"></script>
-    <meta http-equiv="refresh" content="1;url=https://wiki.freebsd.org/SummerOfCode"/>
+    <meta http-equiv="refresh" content="1;url=http://www.FreeBSD.org/projects/summerofcode.html"/>
   </head>
   <body>
     <div id="containerwrap">
